--- a/index.html
+++ b/index.html
@@ -15,5 +15,10 @@
       possimus doloremque similique nesciunt temporibus iure libero ipsam quis
       dicta.
     </p>
+    <ul>
+      <li>Home</li>
+      <li>About Us</li>
+      <li>Contact Us</li>
+    </ul>
   </body>
 </html>
